--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 /* General Styles */
 .App {
   text-align: center;
-  background-color: black;
+  background-color: #040e21;
   color: white;
   padding: 0;
   margin: 0;
@@ -10,7 +10,7 @@
 
 /* Header Styles */
 .App-header {
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: #040e21;
   padding: 20px;
 }
 
@@ -65,23 +65,30 @@
   display: flex;
   align-items: center;
   overflow: hidden;
+  width: 95%;
+  margin: 20px auto;
+  background-color: #040e21;
+  border-radius: 8px;
 }
 
 .carousel {
   display: flex;
   transition: transform 0.5s ease;
+  width: 100%;
 }
 
 .carousel-item {
-  flex: 0 0 30%;
-  /* Show 3 items at a time */
-  max-width: 30%;
+  flex: 0 0 100%;
   box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .carousel-item img {
-  width: 100%;
-  height: 500px;
+  width: 75%;
+  height: auto;
+  max-height: 750px;
   object-fit: cover;
   border-radius: 8px;
   border: 5px solid white;
@@ -90,7 +97,7 @@
 .carousel-control {
   position: absolute;
   top: 50%;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: #040e21;
   color: white;
   border: none;
   cursor: pointer;
@@ -150,5 +157,5 @@
 .footer {
   margin-top: 20px;
   padding: 10px;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: #040e21;
 }
