--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Disney:wght@400;700&display=swap');
 
 .header {
-    background-color: #0f0f0f;
+    background-color: #020812;
     padding: 20px;
     color: #ffffff;
 }
