--- a/src/App.css
+++ b/src/App.css
@@ -1,172 +1,9 @@
 /* General Styles */
 .App {
   text-align: center;
-  background-color: #040e21;
+  background-color: #0e2c62;
   color: white;
   padding: 0;
   margin: 0;
   font-family: Arial, sans-serif;
-}
-
-/* Header Styles */
-.App-header {
-  background-color: #040e21;
-  padding: 20px;
-}
-
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.logo {
-  height: 40px;
-}
-
-.navbar nav ul {
-  display: flex;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.navbar nav ul li {
-  margin: 0 10px;
-}
-
-.navbar nav ul li a {
-  color: white;
-  text-decoration: none;
-}
-
-/* Movie Carousel Styles */
-.movie-carousel {
-  padding: 0;
-  margin: 0;
-}
-
-/* Use this for sliding effect */
-.carousel-slides {
-  display: flex;
-  transition: transform 0.5s ease-in-out;
-  /* Smooth slide transition */
-  width: 100%;
-}
-
-.dropdown-container {
-  margin-bottom: 20px;
-}
-
-.dropdown-container label {
-  display: block;
-  margin-bottom: 5px;
-}
-
-.dropdown-container select {
-  padding: 5px;
-  font-size: 1rem;
-}
-
-.carousel-container {
-  position: relative;
-  display: flex;
-  align-items: center;
-  overflow: hidden;
-  width: 95%;
-  margin: 20px auto;
-  background-color: #040e21;
-  border-radius: 8px;
-}
-
-
-
-/* Carousel Item Styles */
-.carousel-item {
-  flex: 0 0 100%;
-  box-sizing: border-box;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.carousel-item img {
-  width: 75%;
-  height: auto;
-  max-height: 750px;
-  object-fit: cover;
-  border-radius: 8px;
-  border: 5px solid white;
-}
-
-/* Control buttons */
-.carousel-control {
-  position: absolute;
-  top: 50%;
-  background-color: #040e21;
-  color: white;
-  border: none;
-  cursor: pointer;
-  padding: 10px;
-  font-size: 20px;
-  border-radius: 50%;
-  transform: translateY(-50%);
-}
-
-.carousel-control.left {
-  left: 10px;
-}
-
-.carousel-control.right {
-  right: 10px;
-}
-
-/* Indicators */
-.carousel-indicators {
-  display: flex;
-  justify-content: center;
-  margin-top: 10px;
-}
-
-.indicator {
-  background-color: white;
-  border: none;
-  border-radius: 50%;
-  width: 12px;
-  height: 12px;
-  margin: 0 5px;
-  cursor: pointer;
-  opacity: 0.5;
-}
-
-.indicator.active {
-  opacity: 1;
-}
-
-/* Movie Details Styles */
-.movie-details {
-  margin: 10px;
-  padding: 10px;
-  border-radius: 8px;
-  background-color: #040c19;
-
-}
-
-.movie-details img {
-  width: 40%;
-  height: auto;
-  border-radius: 8px;
-  border: 5px solid #fff;
-
-}
-
-.release-date {
-  font-weight: bold;
-}
-
-/* Footer Styles */
-.footer {
-  margin-top: 20px;
-  padding: 10px;
-  background-color: #040e21;
 }
