--- a/src/components/Carousel.css
+++ b/src/components/Carousel.css
@@ -1,3 +1,4 @@
+/* Carousel Container */
 .carousel-container {
     position: relative;
     display: flex;
@@ -9,12 +10,14 @@
     border-radius: 8px;
 }
 
+/* Carousel */
 .carousel {
     display: flex;
     transition: transform 0.5s ease;
     width: 100%;
 }
 
+/* Carousel Item */
 .carousel-item {
     flex: 0 0 100%;
     box-sizing: border-box;
@@ -23,6 +26,7 @@
     align-items: center;
 }
 
+/* Carousel Item Image */
 .carousel-item img {
     width: 40%;
     height: auto;
@@ -30,6 +34,7 @@
     border: 5px solid #fff;
 }
 
+/* Carousel Control Buttons */
 .carousel-control {
     position: absolute;
     top: 50%;
@@ -51,11 +56,13 @@
     right: 10px;
 }
 
+/* Movie Carousel */
 .movie-carousel {
     padding: 0;
     margin: 0;
 }
 
+/* Carousel Slides */
 .carousel-slides {
     display: flex;
     transition: transform 0.5s ease-in-out;
