--- a/src/components/MovieContainer.css
+++ b/src/components/MovieContainer.css
@@ -1,4 +1,3 @@
-/* Movies Container */
 .movies-container {
     display: flex;
     flex-wrap: wrap;
@@ -9,7 +8,7 @@
     overflow: hidden;
 }
 
-/* Movie Items */
+/* Individual Movie Item */
 .movie-item {
     color: #fff;
     border-radius: 8px;
@@ -27,23 +26,24 @@
     margin: 0 10px 10px 0;
 }
 
-/* Hide excess items */
+/* Hidden Movie Item */
 .hide-item {
     display: none;
 }
 
-/* Movie-Specific Text Styles */
+/* Movie-Specific Text Style */
 .movie-item p {
     font-size: 1em;
 }
 
-/* Responsive Adjustments */
+/* Responsive Adjustments for Large Screens */
 @media (min-width: 1200px) {
     .movie-item {
         width: calc(20% - 10px);
     }
 }
 
+/* Responsive Adjustments for Medium-Large Screens */
 @media (max-width: 1199px) and (min-width: 900px) {
     .movie-item {
         width: calc(25% - 10px);
@@ -54,6 +54,7 @@
     }
 }
 
+/* Responsive Adjustments for Medium Screens */
 @media (max-width: 899px) and (min-width: 600px) {
     .movie-item {
         width: calc(33.33% - 10px);
@@ -64,6 +65,7 @@
     }
 }
 
+/* Responsive Adjustments for Small Screens */
 @media (max-width: 599px) and (min-width: 400px) {
     .movie-item {
         width: calc(50% - 10px);
@@ -74,6 +76,7 @@
     }
 }
 
+/* Responsive Adjustments for Extra Small Screens */
 @media (max-width: 399px) {
     .movie-item {
         width: calc(100% - 10px);
@@ -84,7 +87,6 @@
     }
 }
 
-/* Movie-Specific Styles */
 .movie-item.interstellar p {
     font-family: 'Times New Roman', serif;
     color: #f0f0f0;
