--- a/src/components/MovieTrailers.css
+++ b/src/components/MovieTrailers.css
@@ -1,4 +1,3 @@
-/* Style for the trailers container */
 .trailers-container {
     display: flex;
     flex-wrap: wrap;
@@ -8,25 +7,19 @@
     justify-content: center;
 }
 
-/* Style for each trailer item */
 .trailer-item {
     flex: 1 1 calc(25% - 20px);
-    /* Adjust width for 4 items per row */
     box-sizing: border-box;
     text-align: center;
     background-color: #04060a;
     color: #fff;
     border-radius: 8px;
-    /* Reduced border radius for consistency */
     padding: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     max-width: 200px;
-    /* Limit maximum width */
     height: auto;
-    /* Adjust height automatically */
 }
 
-/* Style for trailer image */
 .trailer-image {
     width: 100%;
     height: auto;
@@ -39,11 +32,10 @@
     margin-bottom: 10px;
 }
 
-/* Media query for mobile devices */
+/* Responsive Adjustments for Trailer Items */
 @media (max-width: 600px) {
     .trailer-item {
         flex: 1 1 calc(50% - 10px);
-        /* Adjust width for 2 items per row on small screens */
         padding: 5px;
     }
 
@@ -51,7 +43,6 @@
         font-size: 0.9em;
     }
 
-    /* Hide the last item if it is alone */
     .trailers-container::after {
         content: "";
         display: block;
